# basecode-lsp

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: file.rs  main.rs  snippets.rs  tmux.rs  trie.rs
src/basecode_lsp/: backend.rs  command.rs  file.rs  mod.rs  snippet.rs  tmux.rs  trie.rs  util.rs
