[package]
name = "basecode-lsp"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
glob = "0.3.1"
home = "0.5.9"
serde_json = "1.0.120"
simple-log = "1.6.0"
tokio = { version = "1.38.1", features = ["full"] }
tower-lsp = "0.20.0"
