[package]
name = "basecode-lsp"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
glob = "0.3.2"
hashbrown = "0.15.4"
home = "0.5.11"
regex = "1.11.1"
serde_json = "1.0.138"
simple-log = "2.1.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = "0.20.0"
